# api/apiv1/gen/http/openapi.json
@@ -2777,6 +2777,11 @@
         },
         "restore_config": {
           "$ref": "#/definitions/RestoreConfigSpec"
+        },
+        "zodan_enabled": {
+          "type": "boolean",
+          "description": "Whether Zodan is enabled for this node.",
+          "example": true
         }
       },
       "example": {
@@ -2943,7 +2948,8 @@
           "source_database_id": "02f1a7db-fca8-4521-b57a-2a375c1ced51",
           "source_database_name": "northwind",
           "source_node_name": "n1"
-        }
+        },
+        "zodan_enabled": true
       },
       "required": [
         "name",
@@ -3391,7 +3397,8 @@
                 "source_database_id": "02f1a7db-fca8-4521-b57a-2a375c1ced51",
                 "source_database_name": "northwind",
                 "source_node_name": "n1"
-              }
+              },
+              "zodan_enabled": true
             }
           ],
           "minItems": 1,
@@ -3714,7 +3721,8 @@
               "source_database_id": "02f1a7db-fca8-4521-b57a-2a375c1ced51",
               "source_database_name": "northwind",
               "source_node_name": "n1"
-            }
+            },
+            "zodan_enabled": true
           }
         ],
         "orchestrator_opts": {
